@@ -11,7 +11,7 @@
 #include <boost/asio.hpp>
 
 
-namespace TcpServerBridge
+namespace TcpBridge
 {
 	class TcpServer
 	{
@@ -28,7 +28,7 @@ namespace TcpServerBridge
 		TcpServer(unsigned short port, const std::string& password);
 		~TcpServer();
 
-		socket_ptr	getSocket() const	{return m_Socket;};
+		const socket_ptr&	getSocket() const	{return m_Socket;};
 
 	private:
 		void accept();
